Visualize Confusion Matrix

--- a/[Notes]_02_neural_network_classification_in_tensorflow.ipynb
+++ b/[Notes]_02_neural_network_classification_in_tensorflow.ipynb
@@ -5566,7 +5566,7 @@
       "source": [
         "Now we've got a model trained with a close-to-ideal learning rate and performing pretty well, we've got a couple of options.\n",
         "\n",
-        "We could:\n",
+        "We could: [Important]\n",
         "* Evaluate its performance using other classification metrics (such as a [confusion matrix](https://scikit-learn.org/stable/auto_examples/model_selection/plot_confusion_matrix.html#sphx-glr-auto-examples-model-selection-plot-confusion-matrix-py) or [classification report](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.classification_report.html)).\n",
         "* Assess some of its predictions (through visualizations).\n",
         "* Improve its accuracy (by training it for longer or changing the architecture).\n",
