Visualize confusion matrix using sns heatmap

--- a/[Notes]_02_neural_network_classification_in_tensorflow.ipynb
+++ b/[Notes]_02_neural_network_classification_in_tensorflow.ipynb
@@ -94,7 +94,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,7 +157,7 @@
         "import tensorflow as tf\n",
         "print(tf.__version__)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -202,7 +202,7 @@
         "                    noise=0.03, \n",
         "                    random_state=42)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -227,7 +227,7 @@
         "# Check out the features\n",
         "X"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -262,7 +262,7 @@
         "# See the first 10 labels\n",
         "y[:10]"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -307,7 +307,7 @@
         "circles = pd.DataFrame({\"X0\":X[:, 0], \"X1\":X[:, 1], \"label\":y})\n",
         "circles.head()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -409,7 +409,7 @@
         "# Check out the different labels\n",
         "circles.label.value_counts()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -455,7 +455,7 @@
         "import matplotlib.pyplot as plt\n",
         "plt.scatter(X[:, 0], X[:, 1], c=y, cmap=plt.cm.RdYlBu);"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -515,7 +515,7 @@
         "# Check the shapes of our features and labels\n",
         "X.shape, y.shape"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -553,7 +553,7 @@
         "# Check how many samples we have\n",
         "len(X), len(y)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -593,7 +593,7 @@
         "# View the first example of features and labels\n",
         "X[0], y[0]"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -667,7 +667,7 @@
         "# 3. Fit the model\n",
         "model_1.fit(X, y, epochs=5)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -722,7 +722,7 @@
         "model_1.fit(X, y, epochs=200, verbose=0) # set verbose=0 to remove training updates\n",
         "model_1.evaluate(X, y)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -783,7 +783,7 @@
         "# 3. Fit the model\n",
         "model_2.fit(X, y, epochs=100, verbose=0) # set verbose=0 to make the output print less"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -812,7 +812,7 @@
         "# Evaluate the model\n",
         "model_2.evaluate(X, y)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -893,7 +893,7 @@
         "# 3. Fit the model\n",
         "model_3.fit(X, y, epochs=100, verbose=0) # fit for 100 passes of the data"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -985,7 +985,7 @@
         "  plt.xlim(xx.min(), xx.max())\n",
         "  plt.ylim(yy.min(), yy.max())"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1011,7 +1011,7 @@
         "# Check out the predictions our model is making \n",
         "plot_decision_boundary(model_3, X, y)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1077,7 +1077,7 @@
         "# Fit our model to the data\n",
         "model_3.fit(X_reg_train, y_reg_train, epochs=100)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1148,7 +1148,7 @@
         "# Fit the recompiled model\n",
         "model_3.fit(X_reg_train, y_reg_train, epochs=100)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1400,7 +1400,7 @@
         "plt.scatter(X_reg_test, y_reg_preds.squeeze(), c='r', label='Predictions')\n",
         "plt.legend();"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1486,7 +1486,7 @@
         "# Fit the model\n",
         "history = model_4.fit(X, y, epochs=100)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1721,7 +1721,7 @@
         "# Check out our data\n",
         "plt.scatter(X[:, 0], X[:, 1], c=y, cmap=plt.cm.RdYlBu);"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1761,7 +1761,7 @@
         "# Check the deicison boundary (blue is blue class, yellow is the crossover, red is red class)\n",
         "plot_decision_boundary(model_4, X, y)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1827,7 +1827,7 @@
         "# Fit the model\n",
         "history = model_5.fit(X, y, epochs=100)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2085,7 +2085,7 @@
         "# Fit the model\n",
         "history = model_6.fit(X, y, epochs=100)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2308,7 +2308,7 @@
         "# Evaluate the model\n",
         "model_6.evaluate(X, y)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2356,7 +2356,7 @@
         "# Check out the predictions using 2 hidden layers\n",
         "plot_decision_boundary(model_6, X, y)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2423,7 +2423,7 @@
         "# Fit the model\n",
         "history = model_7.fit(X, y, epochs=100, verbose=0)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2439,7 +2439,7 @@
         "# Evaluate our model\n",
         "model_7.evaluate(X, y)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2485,7 +2485,7 @@
         "# View the predictions of the model with relu and sigmoid activations\n",
         "plot_decision_boundary(model_7, X, y)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2554,7 +2554,7 @@
         "A = tf.cast(tf.range(-10, 10), tf.float32)\n",
         "A"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2597,7 +2597,7 @@
         "# Visualize our toy tensor\n",
         "plt.plot(A);"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2642,7 +2642,7 @@
         "# Use the sigmoid function on our tensor\n",
         "sigmoid(A)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2687,7 +2687,7 @@
         "# Plot sigmoid modified tensor\n",
         "plt.plot(sigmoid(A));"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2732,7 +2732,7 @@
         "# Pass toy tensor through ReLU function\n",
         "relu(A)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2773,7 +2773,7 @@
         "# Plot ReLU-modified tensor\n",
         "plt.plot(relu(A));"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2814,7 +2814,7 @@
         "# Linear - https://www.tensorflow.org/api_docs/python/tf/keras/activations/linear (returns input non-modified...)\n",
         "tf.keras.activations.linear(A)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2855,7 +2855,7 @@
         "# Does the linear activation change anything?\n",
         "A == tf.keras.activations.linear(A)"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2921,7 +2921,7 @@
         "# How many examples are in the whole dataset?\n",
         "len(X)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2954,7 +2954,7 @@
         "# Check the shapes of the data\n",
         "X_train.shape, X_test.shape # 800 examples in the training set, 200 examples in the test set "
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3007,7 +3007,7 @@
         "# Fit the model\n",
         "history = model_8.fit(X_train, y_train, epochs=25)"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3082,7 +3082,7 @@
         "print(f\"Model loss on the test set: {loss}\")\n",
         "print(f\"Model accuracy on the test set: {100*accuracy:.2f}%\")"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3136,7 +3136,7 @@
         "plot_decision_boundary(model_8, X=X_test, y=y_test)\n",
         "plt.show()"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3207,7 +3207,7 @@
         "# You can access the information in the history variable using the .history attribute\n",
         "pd.DataFrame(history.history)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3427,7 +3427,7 @@
         "pd.DataFrame(history.history).plot()\n",
         "plt.title(\"Model_8 training curves\")"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3540,7 +3540,7 @@
         "                      epochs=100,\n",
         "                      callbacks=[lr_scheduler])"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3773,7 +3773,7 @@
         "# Checkout the history\n",
         "pd.DataFrame(history.history).plot(figsize=(10,7), xlabel=\"epochs\");"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3822,7 +3822,7 @@
         "plt.ylabel(\"Loss\")\n",
         "plt.title(\"Learning rate vs. loss\");"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3867,7 +3867,7 @@
         "# Example of other typical learning rate values\n",
         "10**0, 10**-1, 10**-2, 10**-3, 1e-4"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3920,7 +3920,7 @@
         "# Fit the model for 20 epochs (5 less than before)\n",
         "history = model_10.fit(X_train, y_train, epochs=20)"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3995,7 +3995,7 @@
         "# Evaluate model on the test dataset\n",
         "model_10.evaluate(X_test, y_test)"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4050,7 +4050,7 @@
         "plot_decision_boundary(model_10, X=X_test, y=y_test)\n",
         "plt.show()"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4133,7 +4133,7 @@
         "print(f\"Model loss on test set: {loss}\")\n",
         "print(f\"Model accuracy on test set: {(accuracy*100):.2f}%\")"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4180,7 +4180,7 @@
         "# Create confusion matrix\n",
         "confusion_matrix(y_test, y_preds)"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -4221,7 +4221,7 @@
         "# View the first 10 predictions\n",
         "y_preds[:10]"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4268,7 +4268,7 @@
         "# View the first 10 test labels\n",
         "y_test[:10]"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4316,7 +4316,7 @@
         "# Convert prediction probabilities to binary format and view the first 10\n",
         "tf.round(y_preds)[:10]"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4364,7 +4364,7 @@
         "# Create a confusion matrix\n",
         "confusion_matrix(y_test, tf.round(y_preds))"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4460,7 +4460,7 @@
         "           color=\"white\" if cm[i, j] > threshold else \"black\",\n",
         "           size=15)"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4501,7 +4501,7 @@
         "for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
         "  print(i, j)"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4556,7 +4556,7 @@
         "# The data has already been sorted into training and test sets for us\n",
         "(train_data, train_labels), (test_data, test_labels) = fashion_mnist.load_data()"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4597,7 +4597,7 @@
         "print(f\"Training sample:\\n{train_data[0]}\\n\") \n",
         "print(f\"Training label: {train_labels[0]}\")"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4690,7 +4690,7 @@
         "# Check the shape of our data\n",
         "train_data.shape, train_labels.shape, test_data.shape, test_labels.shape"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4719,7 +4719,7 @@
         "# Check shape of a single example\n",
         "train_data[0].shape, train_labels[0].shape"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4761,7 +4761,7 @@
         "import matplotlib.pyplot as plt\n",
         "plt.imshow(train_data[7]);"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4800,7 +4800,7 @@
         "# Check our samples label\n",
         "train_labels[7]"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4845,7 +4845,7 @@
         "# How many classes are there (this'll be our output shape)?\n",
         "len(class_names)"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4887,7 +4887,7 @@
         "plt.imshow(train_data[17], cmap=plt.cm.binary) # change the colours to black & white\n",
         "plt.title(class_names[train_labels[17]]);"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4925,7 +4925,7 @@
         "  plt.title(class_names[train_labels[rand_index]])\n",
         "  plt.axis(False)"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4996,7 +4996,7 @@
         "                                epochs=10,\n",
         "                                validation_data=(test_data, test_labels)) # see how the model performs on the test set during training"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5843,6 +5843,20 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qCLzhp_4RJul"
+      },
+      "source": [
+        "# Visualize confusion matrix using seaborn heaatmap [Important]\n",
+        "import seaborn as sns\n",
+        "plt.figure(figsize = (15,15))\n",
+        "sns.heatmap(conf_mat.astype('int'), cmap = 'Blues', annot = True, fmt = 'd')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "ql-TQxuYiqPl"
@@ -5862,7 +5876,7 @@
         "outputId": "cf18064b-40e3-4256-ed67-a57e33a94cb7"
       },
       "source": [
-        "# Make a prettier confusion matrix\n",
+        "# Make a prettier confusion matrix [Important]\n",
         "make_confusion_matrix(y_true=test_labels, \n",
         "                      y_pred=y_preds,\n",
         "                      classes=class_names,\n",
