--- a/[Notes]_02_neural_network_classification_in_tensorflow.ipynb
+++ b/[Notes]_02_neural_network_classification_in_tensorflow.ipynb
@@ -6029,8 +6029,8 @@
         "id": "pOwM1rqhx6p3"
       },
       "source": [
-        "## What patterns is our model learning?\n",
-        "\n",
+        "## What patterns is our model learning? \n",
+        "**Unwrapping a deep learning model. [Important]**  \n",
         "We've been talking a lot about how a neural network finds patterns in numbers, but what exactly do these patterns look like?\n",
         "\n",
         "Let's crack open one of our models and find out.\n",
@@ -6284,7 +6284,7 @@
       "source": [
         "from tensorflow.keras.utils import plot_model\n",
         "\n",
-        "# See the inputs and outputs of each layer\n",
+        "# See the inputs and outputs of each layer [Important]\n",
         "plot_model(model_14, show_shapes=True)"
       ],
       "execution_count": null,
