--- a/[Notes]_03_convolutional_neural_networks_in_tensorflow.ipynb
+++ b/[Notes]_03_convolutional_neural_networks_in_tensorflow.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "[Notes] 03_convolutional_neural_networks_in_tensorflow.ipynb",
+      "name": "[Notes]_03_convolutional_neural_networks_in_tensorflow.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -110,7 +110,7 @@
         "# Download zip file of pizza_steak images\n",
         "!wget https://storage.googleapis.com/ztm_tf_course/food_vision/pizza_steak.zip \n",
         "\n",
-        "# Unzip the downloaded file\n",
+        "# Unzip the downloaded file [Important]\n",
         "zip_ref = zipfile.ZipFile(\"pizza_steak.zip\", \"r\")\n",
         "zip_ref.extractall()\n",
         "zip_ref.close()"
@@ -194,6 +194,9 @@
         "id": "Tinbc0Zub__W"
       },
       "source": [
+        "### Inspect data folders \n",
+        "**[Important]  [Unique]**\n",
+        "\n",
         "Let's inspect each of the directories we've downloaded.\n",
         "\n",
         "To so do, we can use the command `ls` which stands for list."
