get class names and visualize images

--- a/[Notes]_03_convolutional_neural_networks_in_tensorflow.ipynb
+++ b/[Notes]_03_convolutional_neural_networks_in_tensorflow.ipynb
@@ -437,7 +437,7 @@
       },
       "source": [
         "import os\n",
-        "\n",
+        "# [Important]\n",
         "# Walk through pizza_steak directory and list number of files\n",
         "for dirpath, dirnames, filenames in os.walk(\"pizza_steak\"):\n",
         "  print(f\"There are {len(dirnames)} directories and {len(filenames)} images in '{dirpath}'.\")"
@@ -488,6 +488,15 @@
           },
           "execution_count": 6
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "A2ziIaFw0zQi"
+      },
+      "source": [
+        "### Get class names using the data folder names. [Important]  \n"
       ]
     },
     {
@@ -542,6 +551,8 @@
         "import matplotlib.image as mpimg\n",
         "import random\n",
         "\n",
+        "\n",
+        "# A very handy function to visualize random images from a class of choice.[Important]\n",
         "def view_random_image(target_dir, target_class):\n",
         "  # Setup target directory (we'll view images from here)\n",
         "  target_folder = target_dir+target_class\n",
