Dealing with overfitting [Adjusting model architecture]

--- a/[Notes]_03_convolutional_neural_networks_in_tensorflow.ipynb
+++ b/[Notes]_03_convolutional_neural_networks_in_tensorflow.ipynb
@@ -2023,7 +2023,8 @@
       },
       "source": [
         "Hmm, judging by our loss curves, it looks like our model is **overfitting** the training dataset.\n",
-        "\n",
+        "  \n",
+        "🟢 [Important]: How to spot overfitting? 🔽  \n",
         "> 🔑 **Note:** When a model's **validation loss starts to increase**, it's likely that it's overfitting the training dataset. This means, it's learning the patterns in the training dataset *too well* and thus its ability to generalize to unseen data will be diminished.\n",
         "\n",
         "To further inspect our model's training performance, let's separate the accuracy and loss curves."
@@ -2173,9 +2174,9 @@
         "1. Beat the baseline by overfitting a larger model.\n",
         "2. Reduce overfitting.\n",
         "\n",
-        "So far we've gone through steps 0 and 1.\n",
-        "\n",
-        "And there are even a few more things we could try to further overfit our model:\n",
+        "So far we've gone through steps 0 and 1.  \n",
+        "🟢 [Important]: What causes overfitting: 🔽  \n",
+        "And there are even a few more things we could try to further overfit our model:  \n",
         "* Increase the number of convolutional layers.\n",
         "* Increase the number of convolutional filters.\n",
         "* Add another dense layer to the output of our flattened layer.\n",
