Dealing with overfitting [Data Augmentation]

--- a/[Notes]_03_convolutional_neural_networks_in_tensorflow.ipynb
+++ b/[Notes]_03_convolutional_neural_networks_in_tensorflow.ipynb
@@ -6,7 +6,6 @@
       "name": "[Notes]_03_convolutional_neural_networks_in_tensorflow.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2189,8 +2188,8 @@
         "\n",
         "Say we were building a pizza vs. steak food classifier app, and our model performs very well on our training data but when users tried it out, they didn't get very good results on their own food images, is that a good experience?\n",
         "\n",
-        "Not really...\n",
-        "\n",
+        "Not really...   \n",
+        "🟢 [Important] How to deal with overfitting? Method 1: Adjust model architecture.🔽   \n",
         "So for the next few models we build, we're going to adjust a number of parameters and inspect the training curves along the way.\n",
         "\n",
         "Namely, we'll build 2 more models:\n",
@@ -2415,7 +2414,8 @@
         "id": "6Xx-iI0INio5"
       },
       "source": [
-        "Nice! We can see the training curves get a lot closer to eachother. However, our the validation loss looks to start increasing towards the end and in turn potentially leading to overfitting.\n",
+        "Nice! We can see the training curves get a lot closer to eachother. However, our the validation loss looks to start increasing towards the end and in turn potentially leading to overfitting.  \n",
+        "🟢 [Important] How to deal with overfitting? Method 2: Data Augmentation.  🔽     \n",
         "\n",
         "Time to dig into our bag of tricks and try another method of overfitting prevention, data augmentation.\n",
         "\n",
