Power of shuffling data before fitting

--- a/[Notes]_03_convolutional_neural_networks_in_tensorflow.ipynb
+++ b/[Notes]_03_convolutional_neural_networks_in_tensorflow.ipynb
@@ -2666,9 +2666,21 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "tJBUK6fPA3ol"
+      },
+      "source": [
+        "🟢 [Important]  \n",
+        "Power of shuffling data.  \n",
+        "Why does shuffling influence performance so much? 🔽  "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "sH04UirwQ57K"
       },
       "source": [
+        "\n",
         "> 🤔 **Question:** Why didn't our model get very good results on the training set to begin with?\n",
         "\n",
         "It's because when we created `train_data_augmented` we turned off data shuffling using `shuffle=False` which means our model only sees a batch of a single kind of images at a time. \n",
