--- a/[Notes]_04_transfer_learning_in_tensorflow_part_1_feature_extraction.ipynb
+++ b/[Notes]_04_transfer_learning_in_tensorflow_part_1_feature_extraction.ipynb
@@ -458,7 +458,8 @@
         "id": "8UP8vA_nYoI7"
       },
       "source": [
-        "## Creating models using TensorFlow Hub\n",
+        "## Creating models using TensorFlow Hub \n",
+        "🟢 [Important]: Very important tid bits. 🔽  \n",
         "\n",
         "In the past we've used TensorFlow to create our own models layer by layer from scratch.\n",
         "\n",
@@ -1043,7 +1044,9 @@
       },
       "source": [
         "## Comparing models using TensorBoard\n",
-        "\n",
+        "🟢 [Important]: Section 🔽     \n",
+        "  \n",
+        "  \n",
         "Alright, even though we've already compared the performance of our two models by looking at the accuracy scores. But what if you had more than two models? \n",
         "\n",
         "That's where an experiment tracking tool like [TensorBoard](https://www.tensorflow.org/tensorboard) (preinstalled in Google Colab) comes in.\n",
@@ -1052,6 +1055,7 @@
         "\n",
         "Uploading your results to TensorBoard.dev enables you to track and share multiple different modelling experiments. So if you needed to show someone your results, you could send them a link to your TensorBoard.dev as well as the accompanying Colab notebook.\n",
         "\n",
+        "🟢 [Important]: Note 🔽  \n",
         "> 🔑 **Note:** These experiments are public, do not upload sensitive data. You can delete experiments if needed.\n",
         "\n",
         "To upload a series of TensorFlow logs to TensorBoard, we can use the following command:\n",
