--- a/[Notes]_05_transfer_learning_in_tensorflow_part_2_fine_tuning.ipynb
+++ b/[Notes]_05_transfer_learning_in_tensorflow_part_2_fine_tuning.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "[Notes] 05_transfer_learning_in_tensorflow_part_2_fine_tuning.ipynb",
+      "name": "[Notes]_05_transfer_learning_in_tensorflow_part_2_fine_tuning.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -125,6 +125,7 @@
       "source": [
         "## Creating helper functions\n",
         "\n",
+        "🟢 [Important] 🔽\n",
         "Throughout your machine learning experiments, you'll likely come across snippets of code you want to use over and over again.\n",
         "\n",
         "For example, a plotting function which plots a model's `history` object (see `plot_loss_curves()` below).\n",
@@ -341,8 +342,8 @@
         "id": "vkEZyNnLzppR"
       },
       "source": [
-        "Now we've got some image data, we need a way of loading it into a TensorFlow compatible format.\n",
-        "\n",
+        "Now we've got some image data, we need a way of loading it into a TensorFlow compatible format.  \n",
+        "🟢[Important]: `image_data_from_directory`🔽  \n",
         "Previously, we've used the [`ImageDataGenerator`](https://www.tensorflow.org/api_docs/python/tf/keras/preprocessing/image/ImageDataGenerator) class. And while this works well and is still very commonly used, this time we're going to use the `image_data_from_directory` function.\n",
         "\n",
         "It works much the same way as `ImageDataGenerator`'s `flow_from_directory` method meaning your images need to be in the following file format:\n",
@@ -923,7 +924,8 @@
         "9. Compile the model using the appropriate loss function and choose of optimizer.\n",
         "10. Fit the model for desired number of epochs and with necessary callbacks (in our case, we'll start off with the TensorBoard callback).\n",
         "\n",
-        "Woah... that sounds like a lot. Before we get ahead of ourselves, let's see it in practice."
+        "Woah... that sounds like a lot. Before we get ahead of ourselves, let's see it in practice.   \n",
+        "🟢 [Important]: Create a model using `tf.keras.applications` and `functional API` 🔽    "
       ]
     },
     {
