--- a/[Notes]_05_transfer_learning_in_tensorflow_part_2_fine_tuning.ipynb
+++ b/[Notes]_05_transfer_learning_in_tensorflow_part_2_fine_tuning.ipynb
@@ -11,8 +11,7 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -2249,14 +2248,17 @@
       },
       "source": [
         "### Adding data augmentation right into the model\n",
-        "\n",
         "Previously we've used the different parameters of the `ImageDataGenerator` class to augment our training images, this time we're going to build data augmentation right into the model.\n",
         "\n",
         "How?\n",
         "\n",
         "Using the [`tf.keras.layers.experimental.preprocessing`](https://www.tensorflow.org/api_docs/python/tf/keras/layers/experimental/preprocessing) module and creating a dedicated data augmentation layer.\n",
-        "\n",
-        "This a relatively new feature added to TensorFlow 2.2+ but it's very powerful. Adding a data augmentation layer to the model has the following benefits:\n",
+        "  \n",
+        "This a relatively new feature added to TensorFlow 2.2+ but it's very powerful.   \n",
+        "  \n",
+        "🟢 [Important]: Benifits of adding data augmentation into the model 🔽  \n",
+        "  \n",
+        "Adding a data augmentation layer to the model has the following benefits:\n",
         "* Preprocessing of the images (augmenting them) happens on the GPU rather than on the CPU (much faster).\n",
         "  * Images are best preprocessed on the GPU where as text and structured data are more suited to be preprocessed on the CPU.\n",
         "* Image data augmentation only happens during training so we can still export our whole model and use it elsewhere. And if someone else wanted to train the same model as us, including the same kind of data augmentation, they could.\n",
@@ -2287,6 +2289,8 @@
         "id": "bjHAalnakGEu"
       },
       "source": [
+        "# 🟢 [Important]: Benifits of adding data augmentation into the model 🔽\n",
+        "\n",
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
         "from tensorflow.keras import layers\n",
@@ -2327,7 +2331,7 @@
         "outputId": "ccd983e7-9bff-4540-8ec7-0d00e26506fc"
       },
       "source": [
-        "# View a random image\n",
+        "# View a random image [Important]: Sampling random augmentations\n",
         "import matplotlib.pyplot as plt\n",
         "import matplotlib.image as mpimg\n",
         "import os\n",
