--- a/[Notes]_05_transfer_learning_in_tensorflow_part_2_fine_tuning.ipynb
+++ b/[Notes]_05_transfer_learning_in_tensorflow_part_2_fine_tuning.ipynb
@@ -2783,6 +2783,17 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "9oFAWJvqaNb8"
+      },
+      "source": [
+        "🟢  [Important] : base_model(x, training=False) 🔽   \n",
+        "We set `training = False` in `base_model(x, training=False)` so that we pass augmented images to base model but keep it in inference mode, so batchnorm layers don't get updated.   \n",
+        "This is very important. As they are the only exceptions, **Batch_norm layers shouldnot be unfrozen even during fine tuning.**: https://keras.io/guides/transfer_learning/#build-a-model \n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "9RiP2aR6nqyK"
       },
       "source": [
@@ -3031,31 +3042,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8oF-zsM_wMVQ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "9fca1ee8-875c-4e6a-ec74-a22b63a79cc4"
+        "id": "8oF-zsM_wMVQ"
       },
       "source": [
         "# If the results from our native model and the loaded weights are the same, this should output True\n",
         "results_10_percent_data_aug == loaded_weights_model_results"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 34
-        }
-      ]
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -3079,7 +3073,7 @@
       },
       "source": [
         "import numpy as np\n",
-        "# Check to see if loaded model results are very close to native model results (should output True)\n",
+        "# Check to see if loaded model results are very close to native model results (should output True) [Important]\n",
         "np.isclose(np.array(results_10_percent_data_aug), np.array(loaded_weights_model_results))"
       ],
       "execution_count": null,
