--- a/[Notes]_05_transfer_learning_in_tensorflow_part_2_fine_tuning.ipynb
+++ b/[Notes]_05_transfer_learning_in_tensorflow_part_2_fine_tuning.ipynb
@@ -3048,7 +3048,7 @@
         "# If the results from our native model and the loaded weights are the same, this should output True\n",
         "results_10_percent_data_aug == loaded_weights_model_results"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3134,7 +3134,7 @@
         "For our next experiment we're going to switch to fine-tuning transfer learning. This means we'll be using the same base model except we'll be unfreezing some of its layers (ones closest to the top) and running the model for a few more epochs.\n",
         "\n",
         "The idea with fine-tuning is to start customizing the pre-trained model more to our own data.\n",
-        "\n",
+        "🟢[Important]: Note 🔽\n",
         "> 🔑 **Note:** Fine-tuning usually works best *after* training a feature extraction model for a few epochs and with large amounts of data.\n",
         "\n",
         "We've verified our loaded model's performance, let's check out its layers."
@@ -3912,9 +3912,11 @@
         "\n",
         "Every time you make a change to your models, you need to recompile them.\n",
         "\n",
-        "In our case, we're using the exact same loss, optimizer and metrics as before, except this time the learning rate for our optimizer will be 10x smaller than before (0.0001 instead of Adam's default of 0.001).\n",
+        "In our case, we're using the exact same loss, optimizer and metrics as before, except this time the learning rate for our optimizer will be 10x smaller than before (0.0001 instead of Adam's default of 0.001).  \n",
         "\n",
-        "We do this so the model doesn't try to overwrite the existing weights in the pretrained model too fast. In other words, we want learning to be more gradual.\n",
+        "🟢[Important]🔽  \n",
+        "When fine tuning it is a rule of thumb to lower the learning rate by 10x.  \n",
+        "We do this so the model doesn't try to overwrite the existing weights in the pretrained model too fast. In other words, we want learning to be more gradual.  \n",
         "\n",
         "> 🔑 **Note:** There's no set standard for setting the learning rate during fine-tuning, though reductions of [2.6x-10x+ seem to work well in practice](https://arxiv.org/abs/1801.06146).\n",
         "\n",
@@ -3954,8 +3956,8 @@
         "\n",
         "Time to fine-tune!\n",
         "\n",
-        "We're going to continue training on from where our previous model finished. Since it trained for 5 epochs, our fine-tuning will begin on the epoch 5 and continue for another 5 epochs.\n",
-        "\n",
+        "We're going to continue training on from where our previous model finished. Since it trained for 5 epochs, our fine-tuning will begin on the epoch 5 and continue for another 5 epochs.  \n",
+        "🟢 [Important]: `initial_epoch` 🔽   \n",
         "To do this, we can use the `initial_epoch` parameter of the [`fit()`](https://keras.rstudio.com/reference/fit.html) method. We'll pass it the last epoch of the previous model's training history (`history_10_percent_data_aug.epoch[-1]`)."
       ]
     },
